--- a/nav_bar 1/nav_bar.html
+++ b/nav_bar 1/nav_bar.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>nav_bar</title>
+    <link rel="stylesheet" href="nav_bar.css">
 </head>
 <body>
 <header>
+    <div class="img_logo">
+        <img src="css3.png" alt="logo_du_site">
+    </div>
     <nav>
-
+        <div class="sujet">
+            <p>sujet1</p>
+            <div class="sous-lien">
+                <p>sous_sujet</p>
+                <p>sous_sujet</p>
+            </div>
+        </div>
+        <div class="sujet">
+            <p>sujet1</p>
+            <div class="sous-lien">
+                <p>sous_sujet</p>
+                <p>sous_sujet</p>
+            </div>
+        </div>
+        <div class="sujet">
+            <p>sujet1</p>
+            <div class="sous-lien">
+                <p>sous_sujet</p>
+                <p>sous_sujet</p>
+            </div>
+        </div>
     </nav>
 </header>
 </body>
