--- a/nav_bar 1/nav_bar.html
+++ b/nav_bar 1/nav_bar.html
@@ -34,5 +34,12 @@
         </div>
     </nav>
 </header>
+<main>
+    <img src="css3.png" alt="jj">
+    <img src="css3.png" alt="jj">
+    <img src="css3.png" alt="jj">
+    <img src="css3.png" alt="jj">
+    <img src="css3.png" alt="jj">
+</main>
 </body>
 </html>
