--- a/nav_bar 1/nav_bar.html
+++ b/nav_bar 1/nav_bar.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <header>
+    <div class="bla">
     <div class="img_logo">
         <img src="css3.png" alt="logo_du_site">
     </div>
@@ -33,12 +34,9 @@
             </div>
         </div>
     </nav>
+    </div>
 </header>
 <main>
-    <img src="css3.png" alt="jj">
-    <img src="css3.png" alt="jj">
-    <img src="css3.png" alt="jj">
-    <img src="css3.png" alt="jj">
     <img src="css3.png" alt="jj">
 </main>
 </body>
