--- a/nav_bar2/index.html
+++ b/nav_bar2/index.html
@@ -4,8 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>nav_bar</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	
+	<header>
+		<nav>
+			<a href="#"><img src="img/logo2.png" alt=""></a>
+			<div>
+				<a href="#">Notre boissons</a>
+				<a href="#">Qui nous sommes</a>
+				<a href="#">Nous contacter</a>
+				<a href="#"><img class="uk" src="img/uk_mini.png" alt=""></a>
+			</div>
+		</nav>
+	</header>
 </body>
 </html>
