--- a/nav_bar_tab2/index.html
+++ b/nav_bar_tab2/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>nav_bar_2</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -11,12 +13,13 @@
 		<nav>
 			<a class="logo_a" href="#"><img class="logo" src="image/logo2.png" alt=""></a>
 			<div id="menu">
+				<a href="#">home</a>
 				<a href="#">Notre boissons</a>
 				<a href="#">Qui nous sommes</a>
 				<a href="#">Nous contacter</a>
-				<a href="#"><img class="uk" src="image/uk_mini.png" alt=""></a>
+				<a href="#"><img class="uk" src="image/uk_mini_tr.png" alt=""></a>
 			</div>
-			<svg id="hamburger" viewBox="0 0 20 20">
+			<svg id="hamburger"  viewBox="0 0 20 20">
 			<path fill="none" d="M3.314,4.8h13.372c0.41,0,0.743-0.333,0.743-0.743c0-0.41-0.333-0.743-0.743-0.743H3.314
 			c-0.41,0-0.743,0.333-0.743,0.743C2.571,4.467,2.904,4.8,3.314,4.8z M16.686,15.2H3.314c-0.41,0-0.743,0.333-0.743,0.743
 			s0.333,0.743,0.743,0.743h13.372c0.41,0,0.743-0.333,0.743-0.743S17.096,15.2,16.686,15.2z M16.686,9.257H3.314
@@ -24,5 +27,9 @@
 			</svg>
 		</nav>
 	</header>
+	<main>
+		<p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p><p>raphael</p>
+	</main>
 </body>
+<script src="js/index.js"></script>
 </html>
